aligned text and fixed image size in css

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,3 +1,8 @@
-#slideshow-image {
-	max-width: 600px;
+#slideshow-wrapper {
+	text-align: center;
 }
+
+#slideshow-image {
+	height: 500px;
+}
+
